# trust-ads

./: .env.example  .flake8  README.md  README.ru.md  compose.yml  conftest.py  fixtures.json  pyproject.toml
ads/: admin.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_ad_author_alter_ad_created_at_and_more.py
ads/tests/: test_ads_views.py
config/: settings.py  urls.py
reviews/: admin.py  models.py  permissions.py  serializers.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_options_alter_review_ad_and_more.py
reviews/tests/: test_reviews_views.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_alter_user_image_and_more.py
users/tests/: test_user_views.py
